# news_aggregator

./: .gitignore  Makefile  README.md  pyproject.toml
app/: chunking.py  config.py  logging.py  main.py  models.py  service.py  storage.py  translation.py
app/sources/: base.py  cbr.py  news.py
